--- a/arr.ipynb
+++ b/arr.ipynb
@@ -424,6 +424,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 8, 16, 32]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ex List Comprehension to print powers of 2 from 1 to 6\n",
+    "\n",
+    "v=[2**x for x in range(1,6)]\n",
+    "print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a list of squares of numbers from 1 to 10\n",
+    "\n",
+    "v=[x**2 for x in range(1,11)]\n",
+    "print(v)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (1, 4), (2, 3), (2, 1), (2, 4), (3, 1), (3, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "combs = []\n",
+    "for x in [1,2,3]:\n",
+    "    for y in [3,1,4]:\n",
+    "        if x != y:\n",
+    "            combs.append((x, y))\n",
+    "print(combs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tuple unpacking\n",
+    "a, b, c = (1, 2, 3)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
