--- a/arr.ipynb
+++ b/arr.ipynb
@@ -509,6 +509,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Empty List\n",
+    "l2 = []\n",
+    "print(l2)\n",
+    "print(type(l2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['geeks', 'for', 'geeks', 40.5, 46.5, 38.5, 42.5]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating a List\n",
+    "l1 = [\"geeks\", \"for\", \"geeks\", 40.5, 46.5, 38.5, 42.5]\n",
+    "print(l1)\n",
+    "print(type(l1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using Dynamic input\n",
+    "alas=eval(input(\"Enter List (Enclose it in Sqaure bracket):\"))\n",
+    "print(alas)\n",
+    "print(type(alas))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
